# ntex-bbs

./: .gitignore  Cargo.toml
src/: entry.rs  main.rs  schema.rs
static/: app.js  index.html
