[package]
name = "ntex-bbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "1.0", features = ["tokio"] }
ntex-files = "1.0"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3"
log = "0.4"
dotenvy = "0.15.7"
